* Fix CERT security bug VU#702777: CRAM-MD5 authentication (disabled   by default in Debian) would always grant access after 4 failed   attempts. This closes: bug#292606, #293418 (thanks to Tomas Pospisek   <tpo_deb@sourcepole.ch> for first reporting it and Martin Schulze   <joey@infodrom.org> for providing a patch). * Set urgency=high due to above security fix. * Update local cdbs snippets:   + buildinfo.mk: Make it actually work (tie to proper targets).   + debhelper.mk: Add CDBS_BUILD_DEPENDS.   + bts.mk: Make a test more quiet.

--- a/debian/ipopd.templates.master
+++ b/debian/ipopd.templates.master
@@ -1,6 +1,6 @@
 Template: ipopd/protocol
 Type: multiselect
-_Choices: pop2, pop3, pop3s
+Choices: pop2, pop3, pop3s
 Default: pop3, pop3s
 _Description: Which ports should the server listen on?
  pop2 =  POP 2 on TCP port 109 with TLS support.  This is obsolete.
