* Patch src/c-client/mail.c against remote exploitable buffer overflow   allowing attacker to execute arbitrary code - CAN-2005-2933. This   closes: bug#332215 (thanks to iDEFENCE and Martin Pitt   <martin.pitt@canonical.com>). * Add/update debconf l10n:   + Catalan (ca). Closes: Bug#248762 (thanks to Debian L10n Catalan     Team).   + Czech (cs). Closes: bug#313261 (thanks to Miroslav Kure     <kurem@upcase.inf.upol.cz>).   + French (fr). Closes: Bug#241986 (thanks to debian-l10n-french     mailing list contributors).   + Japanese (ja) Closes: Bug#241804 (thanks to Kenshi Muto     <kmuto@debian.org>).   + Spanish (es). Closes: bug#323375 (thanks to Carlos Galisteo de     Cabo <cgalisteo@k-rolus.net>),   + Swedish (sv). Closes: bug#333346 (thanks to Daniel Nylander     <yeager@lidkoping.net>).   + Turkish (tr). Closes: Bug#249129 (thanks to Mehmet Turker).   + Vietnamese (vi). Closes: bug#324073 (thanks to Vietnamese free-     software translation team / nhóm Việt hóa phần mềm tự     do). * Modernize maintainer scripts (thanks to lintian):   + Use `chown uid:gid` (not `chown uid.gid`).   + Use [ test1 ] && [ test2 ] (not [ test1 -a test2 ]). * Source debconf in libc-clientXXX postinst even if unused (thanks to   lintian). * Claim compliance with Policy 3.6.2 (no changes needed). * Set urgency=high due to security fix.

--- a/debian/ipopd.templates.master
+++ b/debian/ipopd.templates.master
@@ -10,3 +10,13 @@ _Description: Which ports should the server listen on?
  pop3s = POP 3 on TCP port 995 with SSL support.
  .
  If in doubt, choose pop3 and pop3s.
+
+Template: ipopd/force_debconf_choice
+Type: boolean
+Default: false
+_Description: Enforce port selection?
+ The ports selected for enabling may be overridden by locally configured
+ services. By default the port selection is respected only on initial
+ installs, and is ignored on later reconfiguration.
+ .
+ Do you want to ignore possible local tweaks and always use selected ports?
